2000-11-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	From Gunter Kuhnle <gunter@tux.biow.uni-leipzig.de>:

	* src/specfun.c (f_lambertw): new function.
	(lambertw): new function.

	* src/eval.c (ft): added entry for lambertw

	* docs/gnuplot.doc: document new function lambertw

2000-11-07  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* demo/Makefile.am.in: Use variables in place of "gnuplot" (GNUPLOT)
	and "all.dem" (DEMO) to allow more fine-grained control over what is
	run with "make check". Regenerate Makefile.am.

2000-11-06  Ian MacPhedran  <Ian_MacPhedran@engr.USask.Ca>

	* term/tgif.trm: Add PM3D support.

2000-11-06  Johannes Zellner  <johannes@zellner.org>

	* src/gplt_x11.c: Patch from Pieter-Tjerk de Boer to make
	gnuplot_x11 recognizing if the main program died.

2000-11-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/post.trm: fixed /h definition for pm3d gray palette 

2000-11-03  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* lisp/Makefile.dst, lisp/Makefile.in, lisp/gnuplot.el,
	lisp/gpelcard.tex: Update to gnuplot-mode 0.5k (long overdue).

	* lisp/Makefile.in: Add gnuplot.el and gnuplot-gui.el to install
	target, patch by Ralf Ahlbrink <ahlbrink@uos.de>.

	* lisp/Makefile.in: Add DESTDIR support.

	* src/Makefile.am: Add new README to EXTRA_DIST.

	* term/cgm.trm: Correct LaTex table width in term doc section, patch
	by Ralf Ahlbrink <ahlbrink@uos.de>.

2000-11-03  "Bernardo A. Mello"  <bernardo@unb.br> 

	* docs/psdoc/ps_symbols.gpi: Show not only the symbols, but also
	the lines corresponding to each code.

2000-11-03  Johannes Zellner  <johannes@zellner.org>

	* src/gpexecute.inc: split into src/gpexecute.c
	/ src/gpexecute.h.  Updated src/Makefile.am so that
	gnuplot_x11 uses also gpexecute.o. Removed the
	USE_NONBLOCKING_STDOUT definition, it wasn't configurable
	anyway (it was always on) and it made the code unreadable.
	!!! The os2 part is broken !!!

2000-11-03  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
